[package]
name = "MyProject"
version = "0.1.0"
edition = "2021"

[dependencies]
gdal = { version = "0.11.0", features = ["bindgen"] }
tdigest = { version = "0.2.3", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
indicatif = "0.17"
rayon = "1.8"
chrono = "0.4"
ndarray = { version = "0.15", features = ["rayon"] }
env_logger = "0.11"
log = "0.4"
num_cpus = "1.13"
itertools = "0.10"
config = "0.14"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"